# example-datasets

./: .gitignore  README.md
.github/scripts/: sync_issues.py  validate_datasets.py
.github/workflows/: validate-datasets.yaml
Cerro_Hoya_Expedition/: metadata_old_format.csv
datasets/Mothbox/: README.md  datapackage.json  deployments.csv
datasets/amber/: 20241101023820-snapshot_botdetection.json  20241101023820-snapshot_identified.json  20241102021909-snapshot_identified.json  20241125034629-snapshot_botdetection.json  20241125034629-snapshot_identified.json  20241204020630-snapshot_botdetection.json  20241204020630-snapshot_identified.json  20250113031120-snapshot_botdetection.json  20250113031120-snapshot_identified.json  20250128204130-snapshot_botdetection.json  20250128205520-snapshot_botdetection.json  20250203023130-snapshot_botdetection.json  20250203023130-snapshot_identified.json  20250203030250-snapshot_identified.json  20250203035950-snapshot_botdetection.json  20250203035950-snapshot_identified.json  20250710185939-snapshot_botdetection.json  20250710185939-snapshot_identified.json  20250831193129-snapshot_botdetection.json  20250831193129-snapshot_identified.json  README.md  media.csv
datasets/antenna/: README.md
datasets/flatbug/code/: .gitignore  README.md  main.ipynb  prepare.ipynb  pyproject.toml
datasets/ias/code/: main.ipynb  prepare.ipynb  pyproject.toml
datasets/ias/code/resources/: snapshot_ias_denmark_2025_25.11.1.parquet
slides/: README.md
templates/: README.Rmd  README.md  template-camtrapdp.Rmd  template-insectai-camtrapdp.Rmd
(+1850 files in other folders)
